# wireguard-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  netns.sh  test.sh
benches/: criterion.rs
ci/: before_install.sh
src/: anti_replay.rs  bindgen.rs  cli.yaml  config.rs  constants.rs  consts.rs  cookie.rs  crypto_pool.rs  device.rs  error.rs  ip_packet.rs  lib.rs  machine.rs  main.rs  message.rs  messages.rs  mod.rs  noise.rs  peer.rs  ratelimiter.rs  router.rs  tai64n.rs  tests.rs  time.rs  timer.rs  timers.rs  timestamp.rs  tun.rs  types.rs  uapi.rs  util.rs  wireguard.rs  xchacha20poly1305.rs
src/configuration/: config.rs  error.rs  mod.rs  uapi.rs
src/configuration/uapi/: get.rs  mod.rs  set.rs
src/crypto/: hchacha20.rs  mod.rs  xchacha20poly1305.rs
src/device/: allowed_ips.rs  api.rs  mod.rs  peer.rs
src/handshake/: device.rs  macs.rs  messages.rs  mod.rs  noise.rs  peer.rs  ratelimiter.rs  timestamp.rs  types.rs
src/interface/: config.rs  grim_reaper.rs  mod.rs  peer_server.rs
src/noise/: handshake.rs  messages.rs  mod.rs  noise.rs  timestamp.rs
src/platform/: bind.rs  dummy.rs  endpoint.rs  mod.rs  tun.rs  uapi.rs  udp.rs
src/platform/dummy/: bind.rs  endpoint.rs  mod.rs  tun.rs  udp.rs
src/platform/dummy/tun/: dummy.rs  mod.rs  void.rs
src/platform/linux/: mod.rs  tun.rs  uapi.rs  udp.rs
src/platform/macos/: fd.rs  mod.rs  sys.rs  tun.rs  udp.rs
src/platform/unix/: mod.rs  uapi.rs
src/protocol/: README.md  anti_replay.rs  controller.rs  cookie.rs  handshake.rs  ip.rs  load_monitor.rs  mod.rs  peer.rs  re_exports.rs  timer.rs  types.rs
src/route_monitor/: linux.rs  mod.rs
src/router/: anti_replay.rs  buffer.rs  constants.rs  device.rs  inbound.rs  ip.rs  messages.rs  mod.rs  outbound.rs  peer.rs  tests.rs  types.rs  workers.rs
src/timers/: mod.rs  peer.rs  timer.rs
src/types/: bind.rs  dummy.rs  endpoint.rs  keys.rs  mod.rs  tun.rs  udp.rs
src/udp/: frame.rs  mod.rs
src/wireguard/: config.rs  constants.rs  endpoint.rs  mod.rs  peer.rs  queue.rs  tests.rs  timers.rs  types.rs  wireguard.rs  workers.rs
src/wireguard/handshake/: device.rs  macs.rs  messages.rs  mod.rs  noise.rs  peer.rs  ratelimiter.rs  tests.rs  timestamp.rs  types.rs
src/wireguard/router/: anti_replay.rs  constants.rs  device.rs  inbound.rs  ip.rs  messages.rs  mod.rs  mutex.rs  outbound.rs  peer.rs  pool.rs  queue.rs  receive.rs  route.rs  runq.rs  send.rs  tests.rs  types.rs  worker.rs  workers.rs
src/wireguard/router/tests/: bench.rs  mod.rs  tests.rs
src/wireguard/types/: bind.rs  dummy.rs  endpoint.rs  mod.rs  tun.rs
tests/: device.rs  error.rs  iperf-all-day-every-day.sh  lib.rs  netns.sh  peer_stress.py  timers.sh
tools/: wg-quick.bash
