[package]
name = "wireguard-rs"
version = "0.1.0"
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
license = "MIT"

[dependencies]
hex = "0.3"
spin = "0.5.0"
rand = "0.6.5"
blake2 = "0.8"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
hmac = "0.7.1"
generic-array = "0.12.3"
zerocopy = "0.2.7"
byteorder = "1.3.1"
digest = "0.8.0"
futures = "0.1.28"
arraydeque = "0.4.5"
treebitmap = "^0.4"
crossbeam-channel = "0.3.9"
hjul = "0.2.1"
ring = "0.16.7"
chacha20poly1305 = "^0.1"
aead = "^0.1.1"
clear_on_drop = "0.2.3"
env_logger = "0.6"
num_cpus = "^1.10"
daemonize = "0.4.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.x25519-dalek]
version = "^0.5"

[dependencies.subtle]
version = "2.1"
features = ["nightly"]

[dev-dependencies]
proptest = "0.9.4"
pnet = "^0.22"
rand_chacha = "0.2.1"
rand_core = "0.5"
