[package]
name = "wireguard-rs"
version = "0.1.3"
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"

[dependencies]
hex = "0.3"
spin = "0.5.2"
blake2 = "0.8"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
hmac = "0.7.1"
generic-array = "0.12.3"
zerocopy = "0.2.7"
byteorder = "1.3.1"
digest = "0.8.0"
arraydeque = "0.4.5"
treebitmap = { git = "https://github.com/JakubOnderka/treebitmap" }
hjul = "0.2.1"
ring = "0.16.7"
rand = "^0.7"
rand_core = "^0.5"
chacha20poly1305 = "^0.3"
aead = "^0.2"
clear_on_drop = "0.2.3"
env_logger = "0.7"
num_cpus = "^1.10"
daemonize = "0.4.1"
crossbeam-channel = "0.4"
cpuprofiler = { version = "*", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.x25519-dalek]
version = "^0.6"

[dependencies.subtle]
version = "2.1"
features = ["nightly"]

[features]
profiler = ["cpuprofiler"]
start_up = []

[dev-dependencies]
pnet = "0.25.0"
proptest = "0.9.4"
rand_chacha = "0.2.1"
